--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Шапка сайта-->
       <header>
         <nav>
-          <a href="/" lang="en" aria-label="логотип кампании">
+          <a href="./index.html" lang="en" aria-label="логотип кампании">
             <span>Web</span>Studio
           </a>
           <ul>
@@ -88,17 +88,17 @@
           </h2>
           <ul>
             <li>
-              <a href="#">
+              <a href="">
                 <img src="./images/what-we-do/what-we-do-1.jpg" alt="человек печатает на клавиатуре" width="370" height="294">
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="">
                 <img src="./images/what-we-do/what-we-do-2.jpg" alt="человек держит смартфон" width="370" height="294">
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="">
                 <img src="./images/what-we-do/what-we-do-3.jpg" alt="человек держит планшет" width="370" height="294">
               </a>
             </li>
