--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Главная</title>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
   </head>
   <body>
     <!--Шапка сайта-->
@@ -142,6 +145,118 @@
             </li>
           </ul>
         </section>
+        <section class="reviews">
+          <div class="container">
+            <h2 class="rev-title">Отзывы выпускников</h2>
+            <div class="regular slider">
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+              <div class="slider__item">
+                <img src="./images/reviews/rev-mobile1.png" alt="Фото профиля" class="slide__photo">
+                <a href="#" class="slide__link_social"></a>
+                <p class="slide__name">Тоня Кучеровская</p>
+                <p class="slide__disc">Выпуск 2015-го года, Національний університет біоресурсів
+                  і природокористування України</p>
+                <p class="slide__rev">За короткий час занять з Оленою я опанувала граматику і поповнила свій зовсім пустий
+                  словниковий запас. З першого ж
+                  заняття я зрозуміла, що знаходжуся у своїй тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала
+                  моя
+                  успішність. Вона стала для мене авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу
+                  помилку. Зараз
+                  я можу похизуватись тим, що я студен ...</p>
+                <a href="#" class="slide__link_more">Читать дальше</a>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <!--Подвал сайта-->
       <footer>
@@ -163,5 +278,16 @@
           </ul>
         </address>
       </footer>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+          integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-migrate-3.3.2.min.js"
+          integrity="sha256-Ap4KLoCf1rXb52q+i3p0k2vjBsmownyBTE1EqlRiMwA=" crossorigin="anonymous"></script>
+        <script type="text/javascript" src="./slick/slick.min.js"></script>
+        
+        <script type="text/javascript">
+          $(document).ready(function () {
+            $('.regular').slick();
+            });
+        </script>
   </body>
 </html>
